<resources>
    <string name="app_name">GazoraAllasBejelento</string>
    <string name="email">Email</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="projectName">Gázóra állás bejelentő</string>
    <string name="admin_layout">Admin felület</string>
    <string name="reminders">Emlékeztetők</string>
    <string name="previous">Előzmények</string>
    <string name="new_meter">Új óraállás</string>
    <string name="main_menu">Főmenü</string>
    <string name="save">Mentés</string>
    <string name="note">Megjegyzés</string>
    <string name="meter_status">Óraállás</string>
    <string name="date">Dátum</string>
    <string name="set_new_meter_status">Új óraállás rögzítése</string>
    <string name="previous_status">Korábbi óraállások</string>
    <string name="search">Keresés</string>
    <string name="meter_details">Óraállás részletei</string>
    <string name="date_example">Dátum: 2026-03-01</string>
    <string name="meter_example">Óraállás: 1234 m3</string>
    <string name="note_example">Megjegyzés: minta adat</string>
    <string name="edit">Szerkesztés</string>
    <string name="delete">Törlés</string>
    <string name="reminder_save">Emlékeztető mentése</string>
    <string name="reminder_title">Emlékeztető címe</string>
    <string name="edit_users">Felhasználók kezelése</string>
    <string name="edit_meters">Mérők kezelése</string>
    <string name="edit_properties">Fogyasztási helyek kezelése</string>
    <string name="confirm_password">Jelszó megerősítése</string>
    <string name="name">Név</string>
    <string name="load_users">Felhasználók betöltése</string>
    <string name="set_meters">Mérők kezelése</string>
    <string name="set_properties">Fogyasztási helyek kezelése</string>
    <string name="admin_help">Koppintás: szerepkör váltás | Hosszan nyomás: törlés</string>
    <string name="property_save">Fogyasztási hely mentése</string>
    <string name="address">Cím</string>
    <string name="property_name">Fogyasztási hely neve</string>
    <string name="manage_properties">Fogyasztási helyek kezelése</string>
    <string name="save_meter">Mérő mentése</string>
    <string name="property_ip">Fogyasztási hely ID</string>
    <string name="meter_number">Mérő gyári száma</string>
    <string name="manage_meters">Mérők kezelése</string>
    <string name="sort_list">Rendezés óraállás szerint</string>
    <string name="logout">Kijelentkezés</string>
    <string name="empty_list">Még nincs rögzített óraállás.</string>
</resources>