<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_new_meter_status"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp" />

        <EditText
            android:id="@+id/dateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/date"
            android:hint="@string/date"
            android:minHeight="48dp"
            android:inputType="date" />

        <EditText
            android:id="@+id/meterValueInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/meter_status"
            android:hint="@string/meter_status"
            android:minHeight="48dp"
            android:inputType="number"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/noteInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/note"
            android:hint="@string/note"
            android:inputType="text"
            android:minHeight="48dp"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/saveReadingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="24dp" />

    </LinearLayout>
</ScrollView>